fix search btn on mobile

--- a/app/assets/stylesheets/main_partial/_header.scss
+++ b/app/assets/stylesheets/main_partial/_header.scss
@@ -58,7 +58,7 @@ header {
       font-size: 14px;
       z-index: 100;
       .filter-item {
-        display: none;
+        display: block;
         position: relative;
         cursor: pointer;
         border-radius: 3px;
@@ -160,15 +160,27 @@ header {
       z-index: 100;
       position: relative;
     }
-    // &.close {
-    //   .text {
-    //     display: block;
-    //   }
-    //   .filter-item,
-    //   .clear-all-filter {
-    //     display: none;
-    //   }
-    // }
+  }
+  &.close-filter {
+    .search {
+      .search-btn {
+        display: block;
+      }
+    }
+    .filter-panel {
+      .text {
+        display: block;
+      }
+      .filters {
+        padding: 10px 15px;
+        cursor: pointer;
+      }
+      .filter-item,
+      .clear-all-filter,
+      .show-result-mobile {
+        display: none !important;
+      }
+    }
   }
 }
 
@@ -251,19 +263,6 @@ header {
       }
       .show-result-mobile {
         display: none;
-      }
-      &.close {
-        .text {
-          display: block;
-        }
-        .filters {
-          padding: 7px 15px;
-          cursor: pointer;
-        }
-        .filter-item,
-        .clear-all-filter {
-          display: none;
-        }
       }
     }
   }
